# analyzing-vpn-traffic

./: .gitignore  Cargo.toml
.cargo/: config.toml
src/: burn_dataset.rs  categories.rs  data_structure.rs  main.rs  model.rs  parse_data.rs  training.rs
src/visualise/: draw.rs  mod.rs
