[package]
name = "analyzing-vpn-traffic"
version = "0.1.0"
edition = "2021"

[dependencies]
burn = { version = "0.14.0", features = ["burn-train", "train", "wgpu"] }
chrono = {version = "0.4.38", features = ["serde"]}
itertools = "0.13.0"
psutil = "3.3.0"
rayon = "1.10.0"
serde = { version = "1.0.209", features = ["derive",] }
serde_json = "1.0.127"
strum = "0.26.3"
strum_macros = "0.26.4"
